[gd_scene load_steps=22 format=3 uid="uid://f35ry4px04fs"]

[ext_resource type="Script" path="res://game_content/entities/enemies/boss_enemy.gd" id="1_lky16"]
[ext_resource type="PackedScene" uid="uid://dpk0skoxeuoni" path="res://game_content/objects/spike_trap.tscn" id="2_gl02g"]
[ext_resource type="Texture2D" uid="uid://bg46ttsrtlmnn" path="res://sprites/objects/shadow.png" id="2_plily"]
[ext_resource type="Texture2D" uid="uid://dyg44ajx3upmh" path="res://sprites/entities/decebal_head.png" id="3_n7g0v"]
[ext_resource type="PackedScene" uid="uid://dey2t87v7aik4" path="res://game_content/items/boss_arrow.tscn" id="3_nae60"]
[ext_resource type="Script" path="res://game_content/entities/health.gd" id="4_t784h"]
[ext_resource type="Script" path="res://game_content/hurt_box.gd" id="6_dlo11"]
[ext_resource type="AudioStream" uid="uid://ddyutsusej88f" path="res://sounds/hurt.wav" id="8_dh66n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jeg3k"]
atlas = ExtResource("3_n7g0v")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmavd"]
atlas = ExtResource("3_n7g0v")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy0k1"]
atlas = ExtResource("3_n7g0v")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq2me"]
atlas = ExtResource("3_n7g0v")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cmnp"]
atlas = ExtResource("3_n7g0v")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_64vnh"]
atlas = ExtResource("3_n7g0v")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_fivrd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeg3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmavd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy0k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq2me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cmnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64vnh")
}],
"loop": true,
"name": &"head",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_d77jn"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_42md0"]
radius = 26.0192

[sub_resource type="Gradient" id="Gradient_fcg7b"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gppm1"]
gradient = SubResource("Gradient_fcg7b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_88bj7"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.0
angle_min = -90.0
angle_max = 90.0
spread = 180.0
flatness = 0.75
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angular_velocity_min = -360.0
angular_velocity_max = 360.0
orbit_velocity_min = -1.0
orbit_velocity_max = 1.0
gravity = Vector3(0, 200, 0)
scale_max = 3.0
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_gppm1")
hue_variation_min = -0.14
hue_variation_max = -0.01

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l3qjs"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.0
angle_min = -90.0
angle_max = 90.0
spread = 180.0
flatness = 0.75
initial_velocity_min = 50.0
initial_velocity_max = 100.0
angular_velocity_min = -360.0
angular_velocity_max = 360.0
gravity = Vector3(0, -200, 0)
scale_max = 3.0
color = Color(0.41622, 0.361498, 0.361498, 1)
color_ramp = SubResource("GradientTexture1D_gppm1")
hue_variation_min = -0.14
hue_variation_max = -0.01

[node name="BossEnemy" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
script = ExtResource("1_lky16")
spike_scene = ExtResource("2_gl02g")
projectile_scene = ExtResource("3_nae60")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 9.53674e-07)
sprite_frames = SubResource("SpriteFrames_fivrd")
animation = &"head"
autoplay = "head"
frame_progress = 0.624997

[node name="Shadow" type="Sprite2D" parent="AnimatedSprite2D"]
position = Vector2(0, 16)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_plily")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_d77jn")

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("damage_audio_player", "bar")]
script = ExtResource("4_t784h")
damage_cooldown = 0.1
damage_audio_player = NodePath("../AudioStreamPlayer2D")
bar = NodePath("../ColorRect/ColorRect2")

[node name="PlayerHurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("6_dlo11")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtBox"]
position = Vector2(0, -17)
shape = SubResource("CircleShape2D_42md0")

[node name="BloodParticle" type="GPUParticles2D" parent="."]
emitting = false
amount = 164
process_material = SubResource("ParticleProcessMaterial_88bj7")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="DeathParticle" type="GPUParticles2D" parent="."]
position = Vector2(0, 7)
emitting = false
amount = 164
process_material = SubResource("ParticleProcessMaterial_l3qjs")
lifetime = 0.1
one_shot = true
explosiveness = 1.0
randomness = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 100
offset_left = -33.0
offset_top = -64.0
offset_right = 35.0
offset_bottom = -54.0
mouse_filter = 2
color = Color(0.208763, 0.0452632, 0.0452632, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="Timers" type="Node" parent="."]

[node name="MovementTimer" type="Timer" parent="Timers"]
wait_time = 2.5
autostart = true

[node name="ShootTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="SpikeTimer" type="Timer" parent="Timers"]
wait_time = 10.0
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_dh66n")
max_distance = 1000.0

[connection signal="damage_taken" from="Health" to="BloodParticle" method="restart" unbinds=2]
[connection signal="died" from="Health" to="." method="on_died"]
[connection signal="timeout" from="Timers/MovementTimer" to="." method="change_movement"]
[connection signal="timeout" from="Timers/ShootTimer" to="." method="shoot"]
[connection signal="timeout" from="Timers/SpikeTimer" to="." method="spawn_spikes"]
